[package]
name = "dedup-advanced"
version = "1.3.0"
authors = ["Alexander Drozdoff"]
edition = "2018"
description = "Fast and accurate deduplication tool to be used with blockhash"
license = "MIT"
repository = "https://github.com/installgentoo/dedup_advanced"
homepage = "https://github.com/installgentoo/dedup_advanced"

[profile.release]
panic = 'abort'
lto = true
codegen-units = 1

[profile.dev.package."*"]
opt-level = 2

[profile.dev.package."grafix-toolbox"]
opt-level = 0

[[bin]]
name = "dedup_adv"
path = "src/recognise.rs"

[dependencies]
clap = "^3"
hamming = "^0.1"
imagesize = "^0.9"
regex = "^1.5"

grafix-toolbox = { version = "=0.8.5", features = ["adv_img"] }
